--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                 <h4>Coffee Shop--EDA</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/cofee shop1.jpg" title="Coffee Shop--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-coffee shop.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-coffee shop.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -383,7 +383,7 @@
                 <h4>House Rent Prediction--ML</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/House Rent.jpg" title="House Rent Prediction--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-house rent.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-house rent.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -393,7 +393,7 @@
                 <h4>Retail sales--Looker Studio</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Retail sales.jpg" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-retail sales.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-retail sales.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -403,7 +403,7 @@
                 <h4>Supermarket--EDA</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Supermarket.jpg" title="Supermarket--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-supermarket.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-supermarket.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -413,7 +413,7 @@
                 <h4>Transportation Customer Churn--ML</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-transportation churn.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-transportation churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -422,8 +422,8 @@
               <div class="portfolio-info">
                 <h4>Bike Rent--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-bike rent.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding"-arrow-right-circle class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-bike rent.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -433,7 +433,7 @@
                 <h4>Car price--EDA</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Car price.jpg" title="Car price--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-car price.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-car price.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -443,7 +443,7 @@
                 <h4>Air Passenger Satisfication--ML</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Air passanger satification.jpeg" title="Air Passenger Satisfication--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-air passanger.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-air passanger.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -453,7 +453,7 @@
                 <h4>Covid-19 spread in indonesia--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/corona virus.jpg" title="Covid-19 spread in indonesia--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-covid19.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-covid19.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -463,7 +463,7 @@
                 <h4>Image Prediction, Game : Scissor, Papper & Rock</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/scissors, papper and rock.jpg" title=">Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-game" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-Image Prediction.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="portfolio-Image Prediction.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
