--- a/portfolio-Air passanger.html
+++ b/portfolio-Air passanger.html
@@ -48,7 +48,7 @@
         <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#certificate"><i class="bi bi-hdd-stack navicon"></i><span>Certificate</span></a></li>
+        <li><a href="#interest"><i class="bi bi-hdd-stack navicon"></i><span>Area of Interest</span></a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
@@ -63,7 +63,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Forecasting</li>
+            <li class="current">Data Scientific</li>
           </ol>
         </nav>
         <h1>Air Passanger Satisfication--ML</h1>
@@ -155,7 +155,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Forecasting</li>
+                <li><strong>Category</strong>Data Scientific</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/Airline_passenger/airline-passenger-satisfaction-eda.ipynb" class="btn-visit align-self-start">View Project</a></li>
