--- a/portfolio-transportation churn.html
+++ b/portfolio-transportation churn.html
@@ -162,7 +162,7 @@
                 <li><strong>Category</strong>Forecasting</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/Transportation_churn_(1).ipynb" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
