--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
             <h2>Arief Prasetyo Hadi</h2>
             <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Developer, Freelancer">Data Analyst</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
+              <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="bi bi-kaggle"></i></a>
+              <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
+              <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-mail"></i></a>
             </div>
           </div>
         </div>
@@ -373,7 +374,7 @@
               <div class="portfolio-info">
                 <h4>Coffee Shop--EDA</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/cofee shop1.jpg" title="Coffee Shop--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/cofee shop1.jpg" title="Coffee Shop--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
                 <a href="portfolio-coffee shop.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -383,7 +384,7 @@
               <div class="portfolio-info">
                 <h4>House Rent Prediction--ML</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/House Rent.jpg" title="House Rent Prediction--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/House Rent.jpg" title="House Rent Prediction--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
                 <a href="portfolio-house rent.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -393,7 +394,7 @@
               <div class="portfolio-info">
                 <h4>Retail sales--Looker Studio</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Retail sales.jpg" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Retail sales.jpg" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></a>
                 <a href="portfolio-retail sales.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -403,7 +404,7 @@
               <div class="portfolio-info">
                 <h4>Supermarket--EDA</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Supermarket.jpg" title="Supermarket--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Supermarket.jpg" title="Supermarket--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
                 <a href="portfolio-supermarket.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -413,7 +414,7 @@
               <div class="portfolio-info">
                 <h4>Transportation Customer Churn--ML</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
                 <a href="portfolio-transportation churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -423,7 +424,7 @@
               <div class="portfolio-info">
                 <h4>Bike Rent--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding"-arrow-right-circle class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding"-arrow-right-circle class="glightbox preview-link"></a>
                 <a href="portfolio-bike rent.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -433,7 +434,7 @@
               <div class="portfolio-info">
                 <h4>Car price--EDA</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Car price.jpg" title="Car price--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Car price.jpg" title="Car price--EDA" data-gallery="portfolio-gallery-app" class="glightbox preview-link"></a>
                 <a href="portfolio-car price.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -443,7 +444,7 @@
               <div class="portfolio-info">
                 <h4>Air Passenger Satisfication--ML</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Air passanger satification.jpeg" title="Air Passenger Satisfication--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/Air passanger satification.jpeg" title="Air Passenger Satisfication--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
                 <a href="portfolio-Air passanger.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -453,7 +454,7 @@
               <div class="portfolio-info">
                 <h4>Covid-19 spread in indonesia--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/corona virus.jpg" title="Covid-19 spread in indonesia--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/corona virus.jpg" title="Covid-19 spread in indonesia--Tableau" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></a>
                 <a href="portfolio-covid19.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -463,7 +464,7 @@
               <div class="portfolio-info">
                 <h4>Image Prediction, Game : Scissor, Papper & Rock</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/scissors, papper and rock.jpg" title=">Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-game" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="assets/img/masonry-portfolio/scissors, papper and rock.jpg" title=">Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-game" class="glightbox preview-link"></a>
                 <a href="portfolio-Image Prediction.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
@@ -672,11 +673,11 @@
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
       <p>Welcome to my portfolio, please enjoy to scrolling this page.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
+        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="bi bi-kaggle"></i></a>
+        <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
+        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-mail"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
