--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 1993</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ariefprasetyohadi.github.io/">ariefprasetyohadi.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/arief-prasetyo-hadi-admfin/">arief-prasetyo-hadi-admfin</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Jawa Barat</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Jawa Barat 40288</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
