--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume
@@ -68,11 +69,11 @@
             <h2>Arief Prasetyo Hadi</h2>
             <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Developer, Freelancer">Data Analyst</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
               <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
-              <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="bi bi-kaggle"></i></a>
+              <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
               <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
-              <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-mail"></i></a>
+              <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope-fill"></i></a>
             </div>
           </div>
         </div>
@@ -86,7 +87,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am a data analyst and data scientist. Who started learning about data by myself through online platforms. I created this website to showcase my work related to data analysis, prediction and modeling.</p>
+        <p>I'm a Data Scientist with experience in building machine learning models for various industries. I have a great interest in data exploration and visualization. In my free time, I like reading books about data science and keeping up with the latest technological developments.</p>
 
       </div><!-- End Section Title -->
 
@@ -104,16 +105,18 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 April 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ariefprasetyohadi.github.io/">ariefprasetyohadi.github.io</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/arief-prasetyo-hadi-admfin/">arief-prasetyo-hadi-admfin</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Jawa Barat 40288</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Arief Prasetyo Hadi</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma IV</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Bandung, Jawa Barat</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Skill:</strong> <span>Python, Machine Learning, SQL, And data Visualization</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Interest:</strong> <span>Sport, Read and Programming</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Motto:</strong> <span>"Innovation born from data will build a better future."</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Diploma IV</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ariefprasetyohadi.github.io/">ariefprasetyohadi.github.io</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/arief-prasetyo-hadii">arief-prasetyo-hadii</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>riefprasetyoh@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
@@ -139,7 +142,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-emoji-smile"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="100%" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
               <p>Happy Clients</p>
             </div>
           </div><!-- End Stats Item -->
@@ -163,7 +166,7 @@
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
             <i class="bi bi-people"></i>
             <div class="stats-item">
-              <span data-purecounter-start="0" data-purecounter-end="100%" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="10" data-purecounter-duration="1" class="purecounter"></span>
               <p>Hard Workers</p>
             </div>
           </div><!-- End Stats Item -->
@@ -282,10 +285,10 @@
 
             <div class="resume-item pb-0">
               <h4>Arief Prasetyo Hadi</h4>
-              <p><em>Innovative and deadline-driven Data Analyst & Data Scientist with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>Experienced data analyst with a proven track record of delivering actionable insights. Skilled in data mining, statistical analysis, and data visualization techniques. Proficient in SQL, Python, and data visualization tools like Tableau and Power BI.</em></p>
               <ul>
                 <li>Bandung, Jawa Barat</li>
-                <li>www.linkedin/ariefprasetyoh-admfin.com</li>
+                <li>www.linkedin.com/in/arief-prasetyo-hadii</li>
                 <li>riefprasetyoh@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
@@ -297,7 +300,7 @@
               <h8>GPA 3.61</h8>
 
               <p><em>Politeknik Piksi Ganesha, Bandung, Jawa Barat</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>The AAS program provides a strong foundation in fundamental accounting principles, including financial accounting, managerial accounting, and cost accounting. This knowledge is essential for understanding more advanced accounting concepts.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
@@ -306,7 +309,7 @@
               <h8>GPA 3.57</h8>
 
               <p><em>Politeknik Piksi Ganesha, Bandung, Jawa Barat</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>Administration and Finance provides a strong foundation for a career in various business and administrative roles. This foundational knowledge can be beneficial for graduate studies in business administration, management, or related fields. </p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -318,10 +321,11 @@
               <h5>Feb' 2020 - Jan' 2024</h5>
               <p><em>PT Tempo, Bandung, Jawa Barat</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Work with a team of 8 salesmen, providing administrative and operational support.</li>
+                <li>Reduced errors in sales orders by 20% through improved data entry procedures. </li>
+                <li> Managed customer inquiries and resolved issues quickly and efficiently, maintaining customer satisfaction
+                  ratings.</li>
+                <li>Increased team productivity by 15% through streamlined workflow.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -330,10 +334,10 @@
               <h5>Feb'2019 - Feb'2020</h5>
               <p><em>PT Tempo, Bandung, Jawa Barat</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Improved invoice accuracy by 20% through rigorous data validation and quality control measures</li>
+                <li>Automated routine tasks like invoice generation and payment reminders, freeing up 20% of team time for strategic activities.</li>
+                <li>Decreased DSO from 45 days to 30 days by implementing stricter credit policies and efficient collection strategies.</li>
+                <li>Improved customer satisfaction by 10% through prompt and courteous communication and efficient resolution of billing issues.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
@@ -606,7 +610,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Bandung, Jawa Barat 40288, Indonesia </p>
               </div>
             </div><!-- End Info Item -->
 
@@ -614,7 +618,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+62 88807779977</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -622,7 +626,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>riefprasetyoh@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -673,11 +677,11 @@
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
       <p>Welcome to my portfolio, please enjoy to scrolling this page.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
-        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="bi bi-kaggle"></i></a>
+        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
         <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
-        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-mail"></i></a>
+        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
