--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://ariefprasetyohadi.github.io/">ariefprasetyohadi.github.io</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Linkedin:</strong> <span><a href="https://www.linkedin.com/in/arief-prasetyo-hadii">arief-prasetyo-hadii</a></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>riefprasetyoh@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:riefprasetyoh@gmail.com">riefprasetyoh@gmail.com</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -598,7 +598,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Please contact me for offering job or doing some projects.</p>
+        <p> Please contact me if you want to get to know me more and let's talk about something interesting.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade" data-aos-delay="100">
@@ -618,7 +618,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+62 88807779977</p>
+                <p>+62 888077*****</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -675,7 +675,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
-      <p>Welcome to my portfolio, please enjoy to scrolling this page.</p>
+      <p>Welcome to my web portfolio, please enjoy to see the page.</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
         <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
