--- a/index.html
+++ b/index.html
@@ -366,9 +366,8 @@
             <li data-filter="*" class="filter-active">Show all</li>
             <li data-filter=".filter-app">Data Mining</li>
             <li data-filter=".filter-product">Data Scientific</li>
-            <li data-filter=".filter-branding">Data Viz</li>
+            <li data-filter=".filter-branding">Data Visualization</li>
             <li data-filter=".filter-game">Dashboard</li>
-            <li data-filter=".filter-game">AI</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
