--- a/portfolio-Air passanger.html
+++ b/portfolio-Air passanger.html
@@ -45,11 +45,11 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#interest"><i class="bi bi-hdd-stack navicon"></i><span>Area of Interest</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="#https://ariefprasetyohadi.github.io/#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#interest"><i class="bi bi-hdd-stack navicon"></i><span>Area Of Interest</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
