--- a/portfolio-coffee shop.html
+++ b/portfolio-coffee shop.html
@@ -45,11 +45,11 @@
     <nav id="navmenu" class="navmenu">
       <ul>
         <li><a href="index.html"><i class="bi bi-house navicon"></i><span>Home</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
-        <li><a href="#certificate"><i class="bi bi-hdd-stack navicon"></i><span>Certificate</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#about"><i class="bi bi-person navicon"></i><span>About</span></a></li>
+        <li><a href="#https://ariefprasetyohadi.github.io/#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resume</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#portfolio"><i class="bi bi-images navicon"></i><span>Portfolio</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#interest"><i class="bi bi-hdd-stack navicon"></i><span>Area Of Interest</span></a></li>
+        <li><a href="https://ariefprasetyohadi.github.io/#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -158,7 +158,7 @@
                 <li><strong>Category</strong>Business Analysis</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/Dataset/blob/main/coffee_shop_sales1.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/coffee-shop-sales1.ipynb" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
