--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -156,9 +156,9 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>Visualization</li>
-                <li><strong>Source</strong> Tableau</li>
+                <li><strong>Source</strong> Google Looker Studio</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://lookerstudio.google.com/reporting/849c930c-4e99-4c6b-80d1-f053268066b7" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
