--- a/portfolio-weather in seattle.html
+++ b/portfolio-weather in seattle.html
@@ -63,10 +63,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Data Scientific/li>
+            <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Image Prediction, Game : Scissor, Papper & Rock</h1>
+        <h1>Retail sales--Looker Studio</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -98,19 +98,19 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Retail sales.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Bike rent.jpg" alt="">
             </div>
 
           </div>
@@ -159,10 +159,10 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Game</li>
-                <li><strong>Source</strong>Github</li>
+                <li><strong>Category</strong>Visualization</li>
+                <li><strong>Source</strong> Google Looker Studio</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/Proyek_Akhir_Arief_Rock_Paper_Scissors.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://lookerstudio.google.com/reporting/5ed39456-27d1-4155-93f5-bbc46f7fee2c" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
