--- a/index.html
+++ b/index.html
@@ -462,6 +462,16 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Retail sales--Looker Studio</h4>
+                <p>Please click the right button to show the project.</p>
+                <a href="assets/img/masonry-portfolio/seattle weather.png" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></a>
+                <a href="portfolio-weather in seattle.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-game">
               <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
