--- a/index.html
+++ b/index.html
@@ -364,15 +364,15 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">Show all</li>
-            <li data-filter=".filter-app">Data Mining</li>
-            <li data-filter=".filter-product">Data Scientific</li>
+            <li data-filter=".filter-mining">Data Mining</li>
+            <li data-filter=".filter-science">Data Scientific</li>
             <li data-filter=".filter-branding">Data Visualization</li>
             <li data-filter=".filter-game">Dashboard</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mining">
               <img src="assets/img/masonry-portfolio/cofee shop1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Coffee Shop--EDA</h4>
@@ -382,7 +382,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-science">
               <img src="assets/img/masonry-portfolio/House Rent.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>House Rent Prediction--ML</h4>
@@ -402,7 +402,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mining">
               <img src="assets/img/masonry-portfolio/Supermarket.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Supermarket--EDA</h4>
@@ -412,7 +412,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-science">
               <img src="assets/img/masonry-portfolio/Transportation churn.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Transportation Customer Churn--ML</h4>
@@ -423,16 +423,16 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <img src="assets/img/masonry-portfolio/Bike rent.jpg" class="img-fluid" alt="">
+              <img src="assets/img/masonry-portfolio/sales-db.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Bike Rent--Tableau</h4>
+                <h4>Sales Dashboard--Tableau</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Bike rent.jpg" title="Bike Rent--Tableau" data-gallery="portfolio-gallery-branding"-arrow-right-circle class="glightbox preview-link"></a>
-                <a href="portfolio-bike rent.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
+                <a href="assets/img/masonry-portfolio/sales-db.jpg" title="Sales Dashboard--Tableau" data-gallery="portfolio-gallery-branding"-arrow-right-circle class="glightbox preview-link"></a>
+                <a href="portfolio-salesdb.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-mining">
               <img src="assets/img/masonry-portfolio/Car price.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Car price--EDA</h4>
@@ -442,7 +442,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-science">
               <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Air Passenger Satisfication--ML</h4>
@@ -472,7 +472,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-game">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-science">
               <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Image Prediction, Game : Scissor, Papper & Rock</h4>
