--- a/portfolio-salesdb.html
+++ b/portfolio-salesdb.html
@@ -66,7 +66,7 @@
             <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Bike Rent--Tableau</h1>
+        <h1>Sales Dashboard--Tableau</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -158,7 +158,7 @@
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Tableau</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://public.tableau.com/views/SalesCustomerDashboard_17354914561900/SalesDashboard?:language=en-US&:sid=5FB779CB0D714426BE9EF0AE2E7CDC05-0:0&:redirect=auth&:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
