--- a/portfolio-salesdb.html
+++ b/portfolio-salesdb.html
@@ -98,7 +98,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Bike rent.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
