--- a/portfolio-salesdb.html
+++ b/portfolio-salesdb.html
@@ -119,15 +119,15 @@
 
           <div class="col-lg-8" data-aos="fade-up">
             <div class="portfolio-description">
-              <h2>This is an example of portfolio details</h2>
+              <h2>About this project</h2>
               <p>
-                This dashboard is designed using tableau, which is made to help stackholders, including sales managers and executives to analyze sales and customer performance..
+                This dashboard is designed using tableau, which is made to help stackholders, including sales managers and executives to analyze sales and customer performance.
               </p>
               <p>
-                the purpose of the sales dashboard is to present an overview of sales metrics and trends to analyze sales performance from year to year and understand sales trends.
+                The purpose of the sales dashboard is to present an overview of sales metrics and trends to analyze sales performance from year to year and understand sales trends.
               </p>
               <p>
-                Some of the things displayed on this dash board are: Kpi overview, sales trends, product subcategory comparison, weekly trends for sales & profit & weekly trends for sales & profit.
+                Some of the things displayed on this dashboard are: Kpi overview, sales trends, product subcategory comparison, weekly trends for sales & profit & weekly trends for sales & profit.
               </p>
 
               <div class="testimonial-item">
@@ -136,21 +136,7 @@
                   <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <div>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
-                </div>
               </div>
-
-              <p>
-                Impedit ipsum quae et aliquid doloribus et voluptatem quasi. Perspiciatis occaecati earum et magnam animi. Quibusdam non qui ea vitae suscipit vitae sunt. Repudiandae incidunt cumque minus deserunt assumenda tempore. Delectus voluptas necessitatibus est.
-              </p>
-
-              <p>
-                Sunt voluptatum sapiente facilis quo odio aut ipsum repellat debitis. Molestiae et autem libero. Explicabo et quod necessitatibus similique quis dolor eum. Numquam eaque praesentium rem et qui nesciunt.
-              </p>
-
             </div>
           </div>
 
@@ -177,7 +163,7 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
-      <p>Thank you for looking at my site, for the latest information please follow some of my social media accounts.</p>
+      <p>Thank you for looking at my site, for the latest information please follow my social media accounts.</p>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
