--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <h2>Arief Prasetyo Hadi</h2>
             <p>I'm <span class="typed" data-typed-items="Data Analyst, Data Scientist, Developer, Freelancer">Data Analyst</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
-              <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
-              <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
-              <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
-              <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+              <a href="https://www.linkedin.com/in/arief-prasetyo-hadii" target="_blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://github.com/ariefprasetyohadi" target="_blank"><i class="bi bi-github"></i></a>
+              <a href="https://www.kaggle.com/ariefprasetyohadi"target="_blank"><i class="fab fa-kaggle"></i></a>
+              <a href="https://ariefprasetyohadi.medium.com" target="_blank"><i class="bi bi-medium"></i></a>
+              <a href="mailto:riefprasetyoh@gmail.com"target="_blank"><i class="bi bi-envelope-fill"></i></a>
             </div>
           </div>
         </div>
@@ -686,11 +686,11 @@
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
       <p>Welcome to my web portfolio, please enjoy to see the page.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
-        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
-        <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
-        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/ariefprasetyohadi" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.kaggle.com/ariefprasetyohadi"target="_blank"><i class="fab fa-kaggle"></i></a>
+        <a href="https://ariefprasetyohadi.medium.com" target="_blank"><i class="bi bi-medium"></i></a>
+        <a href="mailto:riefprasetyoh@gmail.com"target="_blank"><i class="bi bi-envelope-fill"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
