--- a/portfolio-supermarket.html
+++ b/portfolio-supermarket.html
@@ -165,11 +165,11 @@
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
       <p>Thank you for looking at my site, for the latest information please follow my social media accounts.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
-        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
-        <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
-        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/ariefprasetyohadi" target="_blank"><i class="bi bi-github"></i></a>
+        <a href="https://www.kaggle.com/ariefprasetyohadi"target="_blank"><i class="fab fa-kaggle"></i></a>
+        <a href="https://ariefprasetyohadi.medium.com" target="_blank"><i class="bi bi-medium"></i></a>
+        <a href="mailto:riefprasetyoh@gmail.com"target="_blank"><i class="bi bi-envelope-fill"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
