--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -151,7 +151,7 @@
                 <li><strong>Category</strong>Game</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/Proyek_Akhir_Arief_Rock_Paper_Scissors.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/Proyek_Akhir_Arief_Rock_Paper_Scissors.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
