--- a/portfolio-car price.html
+++ b/portfolio-car price.html
@@ -123,10 +123,10 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                In this project focusing on automobile price analysis and prediction, a Chinese automobile company. Geely Auto aspires to enter the United States market by setting up a manufacturing unit there and producing cars locally to compete with their counterparts in the United States and Europe, and has contracted an automobile consulting firm to understand the factors on which car prices are based.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                In particular, they wanted to understand the factors that influence car prices in the American market, as it may be very different from the Chinese market. The important thing in this analysis is to find which variables are significant for predicting car prices.  Based on various market surveys, the consulting company has collected a large amount of data from different types of cars in the American market.
               </p>
 
               <div class="testimonial-item">
@@ -149,7 +149,7 @@
                 <li><strong>Category</strong>Business Analysis</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/Data-Analyst-Project/blob/main/car-price-prediction-eda-ml.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Data-Analyst-Project/blob/main/car-price-prediction-eda-ml.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
