--- a/portfolio-house rent.html
+++ b/portfolio-house rent.html
@@ -123,10 +123,7 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                This case study focuses on analyzing and predicting house prices in India, a highly desirable area for housing in India. In the context of a dynamic property market, an in-depth understanding of the factors that influence house prices is critical for buyers, sellers, and investors.
               </p>
 
               <div class="testimonial-item">
@@ -148,7 +145,7 @@
                 <li><strong>Category</strong>Forecasting</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/House_rent/house-rent-prediction-analysis-ml.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/House_rent/house-rent-prediction-analysis-ml.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
