--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -146,7 +146,7 @@
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Google Looker Studio</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://lookerstudio.google.com/reporting/849c930c-4e99-4c6b-80d1-f053268066b7" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://lookerstudio.google.com/reporting/849c930c-4e99-4c6b-80d1-f053268066b7"  target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
