--- a/portfolio-salesdb.html
+++ b/portfolio-salesdb.html
@@ -149,7 +149,7 @@
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Tableau</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://public.tableau.com/views/SalesCustomerDashboard_17354914561900/SalesDashboard?:language=en-US&:sid=5FB779CB0D714426BE9EF0AE2E7CDC05-0:0&:redirect=auth&:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://public.tableau.com/views/SalesCustomerDashboard_17354914561900/SalesDashboard?:language=en-US&:sid=5FB779CB0D714426BE9EF0AE2E7CDC05-0:0&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
