--- a/portfolio-weather in seattle.html
+++ b/portfolio-weather in seattle.html
@@ -150,7 +150,7 @@
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Google Looker Studio</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://lookerstudio.google.com/reporting/5ed39456-27d1-4155-93f5-bbc46f7fee2c" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://lookerstudio.google.com/reporting/5ed39456-27d1-4155-93f5-bbc46f7fee2c" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
