--- a/portfolio-Air passanger.html
+++ b/portfolio-Air passanger.html
@@ -145,7 +145,7 @@
                 <li><strong>Category</strong>Data Scientific</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/Airline_passenger/airline-passenger-satisfaction-eda.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/Airline_passenger/airline-passenger-satisfaction-eda.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
