--- a/portfolio-coffee shop.html
+++ b/portfolio-coffee shop.html
@@ -123,10 +123,10 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Transaction records for Maven Roasters, a fictitious coffee shop operating out of three NYC locations. Dataset includes the transaction date, timestamp and location, along with product-level details.
+                In this project, I conducted exploratory data analysis with transaction record data for Maven Roasters, a fictitious coffee shop operating across three locations in NYC.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                The dataset included transaction dates, time and location stamps, and product-level details. The purpose of this analysis is to look at Maven Roasters' sales trends over time, the busiest time of the week and which products are sold most and least frequently.
               </p>
 
               <div class="testimonial-item">
@@ -147,7 +147,7 @@
                 <li><strong>Category</strong>Business Analysis</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/coffee-shop-sales1.ipynb" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/blob/main/coffee-shop-sales1.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
