--- a/portfolio-transportation churn.html
+++ b/portfolio-transportation churn.html
@@ -150,7 +150,7 @@
                 <li><strong>Category</strong>Forecasting</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
-                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/tree/main/transportation_churn" class="btn-visit align-self-start">View Project</a></li>
+                <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/tree/main/transportation_churn" target="_blank" class="btn-visit align-self-start">View Project</a></li>
               </ul>
             </div>
           </div>
