--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -111,6 +111,10 @@
               <img src="assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
 
+            <div class="swiper-slide">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
+            </div>
+
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
@@ -123,10 +127,7 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                This project is a dashboard created with looker studio that displays retail sales data for several brands in Indonesia in 2019. The data displayed is in the form of a line chart that displays sales movement for one year, a pie chart that displays the proportion of sales in percent and mapping by displaying points in potential areas with the amount of products sold.
               </p>
 
               <div class="testimonial-item">
