--- a/portfolio-salesdb.html
+++ b/portfolio-salesdb.html
@@ -111,6 +111,10 @@
               <img src="assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
+            <div class="swiper-slide">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
+            </div>
+
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
