--- a/portfolio-tour and travel churn.html
+++ b/portfolio-tour and travel churn.html
@@ -127,10 +127,10 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                A tour & travel company wants to predict whether a customer will switch or not. Based on several customer characteristics such as age, frequent flyer status, annual income class, services chosen, accounts activated on social media, whether or not they have booked a hotel, Target.
               </p>
               <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                Analysis and forecasting is based on the impact of customer churn on annual revenue, hotel reservations, and whether or not they make reservations to assist businesses in developing predictive models, saving money, and conducting compelling EDA..
               </p>
 
               <div class="testimonial-item">
