--- a/portfolio-weather in seattle.html
+++ b/portfolio-weather in seattle.html
@@ -68,7 +68,7 @@
             <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Retail sales--Looker Studio</h1>
+        <h1>Weather in seattle Dashboard--Looker Studio</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -112,7 +112,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Bike rent.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
 
           </div>
@@ -127,18 +127,16 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                This project contains reports and forecasts of weather in Seattle, Washington from 2012 to 2015. The focus of this project is to see how often the intensity of weather changes that occur every year. Which can be seen in the bar charts and pie charts that visualize some of the following weather: sunny, foggy, drizzly, rainy, and snowy weather.
               </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
-              </p>
+
 
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
                   <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
-                </p>v>
+                </p>
               </div>
             </div>
           </div>
