--- a/index.html
+++ b/index.html
@@ -415,10 +415,10 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-science">
               <img src="assets/img/masonry-portfolio/Transportation churn.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Transportation Customer Churn--ML</h4>
+                <h4>Tour and travel Churn--ML</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
-                <a href="portfolio-transportation churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
+                <a href="portfolio-portfolio-tour and travel churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -465,7 +465,7 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <img src="assets/img/masonry-portfolio/seattle weather.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Retail sales--Looker Studio</h4>
+                <h4>Weather in Seattle Dashboard--Looker Studio</h4>
                 <p>Please click the right button to show the project.</p>
                 <a href="assets/img/masonry-portfolio/seattle weather.png" title="Image Prediction, Game : Scissor, Papper & Rock" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"></a>
                 <a href="portfolio-weather in seattle.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
