--- a/portfolio-supermarket.html
+++ b/portfolio-supermarket.html
@@ -123,10 +123,7 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-              <p>
-                Amet consequatur qui dolore veniam voluptatem voluptatem sit. Non aspernatur atque natus ut cum nam et. Praesentium error dolores rerum minus sequi quia veritatis eum. Eos et doloribus doloremque nesciunt molestiae laboriosam.
+                The growth of supermarkets in most densely populated cities is increasing and the market competition is also high. This calls for market basket analysis, which is commonly used in retail companies to identify buying patterns and relationships between products purchased together by customers. This helps businesses in cross-selling efforts, improving marketing strategies, understanding customer preferences.
               </p>
 
               <div class="testimonial-item">
