--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
               <div class="portfolio-info">
                 <h4>Tour and travel Churn--ML</h4>
                 <p>Please click the right button to show the project.</p>
-                <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Transportation Customer Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
-                <a href="portfolio-portfolio-tour and travel churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
+                <a href="assets/img/masonry-portfolio/Transportation churn.jpg" title="Tour and travel Churn--ML" data-gallery="portfolio-gallery-product" class="glightbox preview-link"></a>
+                <a href="portfolio-tour and travel churn.html" title="More Details" class="details-link"><i class="bi bi-arrow-right-circle"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
