--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -97,18 +97,10 @@
               }
             }
           </script>
-          <div class="swiper-wrapper align-items-center">
+          <div class="mg-fluid align-items-center">
 
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Transportation churn.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/House Rent.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" alt="">
+            <div class="img-fluid">
+              <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" alt="">
             </div>
 
           </div>
