--- a/portfolio-tour and travel churn.html
+++ b/portfolio-tour and travel churn.html
@@ -100,19 +100,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Transportation churn.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/House Rent.jpg" alt="">
             </div>
 
           </div>
